--- a/src/style/indexs.less
+++ b/src/style/indexs.less
@@ -1,6 +1,7 @@
-body{
-    div{
-        border:1px solid red;
-        color:#fff;
+body {
+    div {
+        border: 1px solid red;
+        color: black;
+        transform: rotate(45deg)
     }
 }
