--- a/src/style/indexs.less
+++ b/src/style/indexs.less
@@ -2,6 +2,10 @@ body {
     div {
         border: 1px solid red;
         color: black;
-        transform: rotate(45deg)
+        transform: rotate(45deg);
     }
+}
+
+#root {
+    color: red;
 }
